Get Controller and Job Preference Count API Changes

--- a/skillmuniwebservice/Web.config
+++ b/skillmuniwebservice/Web.config
@@ -95,11 +95,15 @@
     <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=103.7.64.68;user id=aspire;password=a5p1re;database=db_sul_beta&quot;" providerName="System.Data.EntityClient" />-->
     <!--Waste Management System Database Beta -->
 	  
-    <add name="dbconnectionstring" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
-    <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=15.207.42.176;user id=aspire;password=a5p1re@new21;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="dbconnectionstring" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=15.207.42.176;user id=aspire;password=a5p1re@new21;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />-->
+
+    <add name="dbconnectionstring" connectionString="Datasource=20.193.143.36;Database=db_sul_prd_V2;uid=tgc;password=Tgc@29052025;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=20.193.143.36;user id=tgc;password=Tgc@29052025;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />
+
     <!-- Skilluni APP Database Beta -->
 	  
-    <!--<add name="dbconnectionstring" connectionString="Datasource=180.149.241.40;Database=db_sul_pre_prd;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="dbconnectionstring" connectionString="Datasource=180.149.241.40;Database=db_sul_pre_prd;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" /> m
     <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=180.149.241.40;user id=aspire;password=a5p1re;database=db_sul_pre_prd&quot;" providerName="System.Data.EntityClient" />
     <add name="m2ostcat" connectionString="Datasource=103.7.64.68;Database=db_m2ost_production_v_5_beta;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
     <add name="dbJob" connectionString="Datasource=103.7.64.68;Database=db_sul_pre_prd;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />-->
@@ -111,8 +115,9 @@
    -->
     <!-- Skilluni APP Country Database Production / Beta -->
     <!--<add name="dbconnectioncrm" connectionString="Datasource=103.7.64.53;Database=db_crm;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />-->
-    <add name="dbconnectioncrm" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
-   </connectionStrings>
+    <!--<add name="dbconnectioncrm" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />-->
+    <add name="dbconnectioncrm" connectionString="Datasource=20.193.143.36;Database=db_sul_prd_V2;uid=tgc;password=Tgc@29052025;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
