--- a/skillmuniwebservice/bin/m2ostnextservice.dll.config
+++ b/skillmuniwebservice/bin/m2ostnextservice.dll.config
@@ -98,8 +98,8 @@
     <!--<add name="dbconnectionstring" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
     <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=15.207.42.176;user id=aspire;password=a5p1re@new21;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />-->
 
-    <add name="dbconnectionstring" connectionString="Datasource=20.193.143.36;Database=db_sul_prd_V2;uid=tgc;password=Tgc@29052025;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
-    <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=20.193.143.36;user id=tgc;password=Tgc@29052025;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbconnectionstring" connectionString="Datasource=skillmuni-db-prod-57.cmeyfwnqk54f.ap-south-1.rds.amazonaws.com;Database=db_sul_prd_V2;uid=tgcakash;password=Tgc@1234;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="db_m2ostEntities" connectionString="metadata=res://*/m2ostService.csdl|res://*/m2ostService.ssdl|res://*/m2ostService.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=skillmuni-db-prod-57.cmeyfwnqk54f.ap-south-1.rds.amazonaws.com;user id=tgc;password=Tgc@1234;database=db_sul_prd_V2&quot;" providerName="System.Data.EntityClient" />
 
     <!-- Skilluni APP Database Beta -->
 	  
@@ -116,7 +116,7 @@
     <!-- Skilluni APP Country Database Production / Beta -->
     <!--<add name="dbconnectioncrm" connectionString="Datasource=103.7.64.53;Database=db_crm;uid=aspire;password=a5p1re;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />-->
     <!--<add name="dbconnectioncrm" connectionString="Datasource=15.207.42.176;Database=db_sul_prd_V2;uid=aspire;password=a5p1re@new21;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />-->
-    <add name="dbconnectioncrm" connectionString="Datasource=20.193.143.36;Database=db_sul_prd_V2;uid=tgc;password=Tgc@29052025;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="dbconnectioncrm" connectionString="Datasource=skillmuni-db-prod-57.cmeyfwnqk54f.ap-south-1.rds.amazonaws.com;Database=db_sul_prd_V2;uid=tgcakash;password=Tgc@1234;convert zero datetime=True;Charset=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
